src/objects/ServiceAppointment.object
<CustomObject>
    <fields>
        <fullName>CSE_CAS_Asignada__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Asignada</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSE_CAS_Asignar_Como_Franquiciado__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campos casilla para identificar si en la cita de servicio se tiene que asignar como franquiciado</description>
        <label>Asignar como franquiciado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSE_CAS_Asignar_Mizad__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Asignar como Mizad</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSE_CAS_Asignar_como_Urgencias__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Asignar como Red Urgencias</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSE_CAS_Asignar_territorio_prim_no_franq__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campos casilla para identificar si en la cita de servicio se tiene que asignar como territorio no franquiciado</description>
        <label>Asignar territorio prim no franquiciado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSE_CAS_Autoasignar__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Si está marcado indica que la cita se debe asignar al profesional que realiza la reserva.</description>
        <label>Autoasignar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSE_CAS_Cambio_de_cita__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cambio de cita</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSE_CAS_Comprobado_Horario__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Comprobado Horario</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSE_CAS_Crear_cita_app__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Crear cita app</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSE_CAS_Urgente__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check que indica si la cita es urgente o no</description>
        <label>Urgente</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSE_DAT_Fecha_Hora_Fin_Nueva_Cita__c</fullName>
        <label>Fecha/Hora Fin Nueva Cita</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CSE_DAT_Fecha_Hora_Inicio_Nueva_Cita__c</fullName>
        <label>Fecha/Hora Inicio Nueva Cita</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CSE_DAT_Fecha_Proxima_Programacion__c</fullName>
        <label>Fecha Próxima Programación</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CSE_DAT_Fecha_Ultima_Programacion__c</fullName>
        <label>Fecha Última Programación</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CSE_DAT_Fecha_para_nueva_cita__c</fullName>
        <label>Fecha para nueva cita</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CSE_FOR_Calculo_de_Segmentacion__c</fullName>
        <formula>IF(CSE_TXT_Segmentacion_Cliente__c  = &quot;Normal&quot;,50,
IF(CSE_TXT_Segmentacion_Cliente__c  = &quot;Vip&quot;,70,
IF(CSE_TXT_Segmentacion_Cliente__c  = &quot;Valor&quot;,90,
IF(CSE_TXT_Segmentacion_Cliente__c  = &quot;Oro&quot;,90,
IF(CSE_TXT_Segmentacion_Cliente__c  = &quot;Vip&quot;,90,0
)
)
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculo de Segmentación</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSE_FOR_Num_Asignar_Franquiciado__c</fullName>
        <formula>IF( CSE_CAS_Asignar_Como_Franquiciado__c , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Num Asignar Franquiciado</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSE_FOR_Num_Asociado_Mizad__c</fullName>
        <formula>IF (CSE_CAS_Asignar_Mizad__c , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Num Asociado Mizad</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSE_FOR_Num_Asociado_Urgencias__c</fullName>
        <formula>IF ( CSE_CAS_Asignar_como_Urgencias__c , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Num Asociado Urgencias</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSE_LKP_Profesional_Programado__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Profesional Programado</label>
        <referenceTo>ServiceResource</referenceTo>
        <relationshipLabel>Citas de servicios</relationshipLabel>
        <relationshipName>Citas_de_servicios</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CSE_NUM_Numero_de_Ofrecimientos__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Numero de Ofrecimientos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSE_SEL_Gremio__c</fullName>
        <label>Gremio</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Gremios</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSE_SEL_Hora_para_nueva_cita__c</fullName>
        <label>Hora para nueva cita</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Rango_2_Horas</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSE_SEL_Motivo_Desasignacion__c</fullName>
        <description>Motivo el cual el profesional se desasigna una cita de servicio que se le había asignado previamente.</description>
        <label>Motivo de desasignación</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Motivo_Desasignacion</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSE_SEL_Motivo_Retraso__c</fullName>
        <description>Motivo del retraso del profesional a la cita de servicio con el cliente.</description>
        <label>Motivo de retraso</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Motivo_Retraso</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSE_SEL_Motivo_de_cambio_de_cita__c</fullName>
        <description>El profesional rellena este campo para indicar el motivo por el cual cambia la fecha de una cita de servicio.</description>
        <label>Motivo de cambio de cita</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Retraso profesional</fullName>
                </value>
                <value>
                    <fullName>Accidente/baja médica</fullName>
                </value>
                <value>
                    <fullName>Pendiente gremio anterior</fullName>
                </value>
                <value>
                    <fullName>Falta de material/herramientas</fullName>
                </value>
                <value>
                    <fullName>Cliente ausente</fullName>
                </value>
                <value>
                    <fullName>Cambio de hora petición del cliente/perjudicado</fullName>
                </value>
                <value>
                    <fullName>Error de apertura</fullName>
                </value>
                <value>
                    <fullName>Otros</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSE_SEL_Tipo_Red__c</fullName>
        <label>Tipo de Servicio</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Tipo_de_Servicio</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSE_TXT_Comentario_Estado__c</fullName>
        <label>Comentario</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSE_TXT_Estado_Anterior__c</fullName>
        <description>Guarda el código del estado anterior de la Cita de Servicio.</description>
        <label>Estado Anterior</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSE_TXT_Identificador__c</fullName>
        <description>Identificador exclusivo de Cita de servicio</description>
        <externalId>true</externalId>
        <label>Identificador</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CSE_TXT_Segmentacion_Cliente__c</fullName>
        <description>Indica la segmentación del cliente asociado a la cita</description>
        <label>Segmentación Cliente</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSE_TXT_Tipo_de_Caso__c</fullName>
        <description>Muestra el tipo de caso en el layout de la cita de servicio.</description>
        <label>Tipo de Intervención</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FSL__Appointment_Grade__c</fullName>
        <label>Appointment Grade</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Auto_Schedule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Emergency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Emergency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__GanttColor__c</fullName>
        <label>Gantt Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__GanttLabel__c</fullName>
        <label>Gantt Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__InJeopardyReason__c</fullName>
        <label>In Jeopardy Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Delayed Start</fullName>
                </value>
                <value>
                    <fullName>Delayed Finish</fullName>
                </value>
                <value>
                    <fullName>No Response</fullName>
                </value>
                <value>
                    <fullName>Due Date Approaching</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__InJeopardy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Jeopardy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__InternalSLRGeolocation__c</fullName>
        <label>Internal SLR Geolocation</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>FSL__IsFillInCandidate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Fill In Candidate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__IsMultiDay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is MultiDay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__MDS_Calculated_length__c</fullName>
        <label>Multiday Work Calculated length</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__MDT_Operational_Time__c</fullName>
        <label>Multiday Work Operational Time</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSL__Pinned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pinned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Prevent_Geocoding_For_Chatter_Actions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prevent Geocoding For Chatter Actions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Related_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Service</label>
        <referenceTo>ServiceAppointment</referenceTo>
        <relationshipLabel>Service Appointments</relationshipLabel>
        <relationshipName>Service_Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSL__Same_Day__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Same Day</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Same_Resource__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Same Resource</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Schedule_Mode__c</fullName>
        <label>Schedule Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Automatic</fullName>
                </value>
                <value>
                    <fullName>Optimization</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__Schedule_over_lower_priority_appointment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Schedule Over Lower Priority Appointment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Scheduling_Policy_Used__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scheduling Policy Used</label>
        <referenceTo>FSL__Scheduling_Policy__c</referenceTo>
        <relationshipLabel>Service Appointments</relationshipLabel>
        <relationshipName>Service_Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSL__Time_Dependency__c</fullName>
        <label>Time Dependency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Same Start</fullName>
                </value>
                <value>
                    <fullName>Start After Finish</fullName>
                </value>
                <value>
                    <fullName>Finish Before Start</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__UpdatedByOptimization__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UpdatedByOptimization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Virtual_Service_For_Chatter_Action__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Virtual Service For Chatter Action (SLR)</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>All_ServiceAppointments</fullName>
        <columns>Name</columns>
        <columns>ParentRecord</columns>
        <columns>ParentRecordType</columns>
        <columns>Status</columns>
        <columns>ArrivalWindowStartTime</columns>
        <columns>ArrivalWindowEndTime</columns>
        <columns>CSE_LKP_Profesional_Programado__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todas citas de servicios</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>My_ServiceAppointments</fullName>
        <filterScope>Mine</filterScope>
        <label>Mis citas de servicios</label>
    </listViews>
    <recordTypes>
        <fullName>Citas_estado_asignacion_directa</fullName>
        <active>true</active>
        <label>Citas estado asignacion directa</label>
    </recordTypes>
    <recordTypes>
        <fullName>Citas_estados_en_curso</fullName>
        <active>true</active>
        <label>Citas estados en curso</label>
    </recordTypes>
    <recordTypes>
        <fullName>Citas_estados_terminados</fullName>
        <active>true</active>
        <label>Citas estados terminados</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Comentario_cita_de_servicio_anulada</fullName>
        <active>false</active>
        <description>Es obligario indicar el motivo de la anulación de la cita en el campo &quot;comentarios&quot; en el caso de que un profesional anule una cita de servicio que se le había asignado.</description>
        <errorConditionFormula>AND( ISPICKVAL(Status,&quot;Anulada&quot;), CSE_TXT_Comentario_Estado__c  = &quot;&quot;)</errorConditionFormula>
        <errorMessage>Debe indicar el motivo de anulación de la cita de servicio en el campo &quot;Comentario&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Comentario_motivo_desasignacion</fullName>
        <active>true</active>
        <description>El prof debe seleccionar un motivo por el cual se desasigna la cita en el campo &quot;Motivo de desasignación&quot;</description>
        <errorConditionFormula>AND( ISPICKVAL(Status,&quot;Desasignada&quot;),ISPICKVAL(CSE_SEL_Motivo_Desasignacion__c,&quot;&quot;))</errorConditionFormula>
        <errorMessage>Debe indicar el motivo de la desasignación de la cita</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Editar_campo_identificador</fullName>
        <active>true</active>
        <description>El campo identificador  no puede ser modificado</description>
        <errorConditionFormula>IF(AND(NOT(ISBLANK(PRIORVALUE(CSE_TXT_Identificador__c))),ISCHANGED(CSE_TXT_Identificador__c)), true, false)</errorConditionFormula>
        <errorMessage>El campo identificador  no puede ser modificado</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__Dont_allow_scheduled_or_dispatched</fullName>
        <active>true</active>
        <description>Don&apos;t allow creation of service with status scheduled or  dispatched</description>
        <errorConditionFormula>AND($Setup.FSL__Service_Creation_Validation_Rules__c.FSL__Service_Creation_Status_Validation__c,AND(ISNEW(),(OR(ISPICKVAL(StatusCategory, &quot;Scheduled&quot;),ISPICKVAL(StatusCategory, &quot;Dispatched&quot;)))))</errorConditionFormula>
        <errorMessage>New service appointment cannot be created in scheduled or  dispatched statuses.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__Related_Service_with_time_dependency</fullName>
        <active>true</active>
        <description>If related service is not empty then time dependency is not empty</description>
        <errorConditionFormula>( !ISBLANK(FSL__Related_Service__c) &amp;&amp; ( ISBLANK(TEXT(FSL__Time_Dependency__c)) &amp;&amp; !FSL__Same_Day__c &amp;&amp; !FSL__Same_Resource__c ) )</errorConditionFormula>
        <errorMessage>Please select Time Dependency or Same Day or Same Reosurce .</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__Same_Resource_Same_Start</fullName>
        <active>true</active>
        <description>Can&apos;t be same start and same reosurce</description>
        <errorConditionFormula>TEXT(FSL__Time_Dependency__c) = &quot;Same Start&quot; &amp;&amp; FSL__Same_Resource__c</errorConditionFormula>
        <errorMessage>Resource dependency is invalid. Time Dependency can&apos;t be Same Start when same resource is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__Schedule_End_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL(SchedEndTime) &amp;&amp; NOT(ISNULL(SchedStartTime))</errorConditionFormula>
        <errorDisplayField>SchedEndTime</errorDisplayField>
        <errorMessage>Both scheduled start and end are required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__Schedule_Start_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL(SchedStartTime) &amp;&amp; NOT(ISNULL(SchedEndTime))</errorConditionFormula>
        <errorDisplayField>SchedStartTime</errorDisplayField>
        <errorMessage>Both scheduled start and end are required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__Service_Color_HEX_Format</fullName>
        <active>true</active>
        <errorConditionFormula>(!ISBLANK(FSL__GanttColor__c)) &amp;&amp; (NOT(REGEX(FSL__GanttColor__c, &quot;#[a-fA-F0-9]{6}&quot;)))</errorConditionFormula>
        <errorDisplayField>FSL__GanttColor__c</errorDisplayField>
        <errorMessage>Gantt color must be in hexadecimal format: (for example: #ffffff)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__Time_dependency_with_related_service</fullName>
        <active>true</active>
        <errorConditionFormula>( ISBLANK(FSL__Related_Service__c) &amp;&amp; ( !ISBLANK(TEXT(FSL__Time_Dependency__c)) ||  FSL__Same_Day__c || FSL__Same_Resource__c ) )</errorConditionFormula>
        <errorDisplayField>FSL__Related_Service__c</errorDisplayField>
        <errorMessage>Please select Related Service.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__isDueDateExist</fullName>
        <active>false</active>
        <description>Check if DueDate field exist on service appointment.</description>
        <errorConditionFormula>ISNULL(  DueDate )</errorConditionFormula>
        <errorDisplayField>DueDate</errorDisplayField>
        <errorMessage>DueDate field is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__isDurationExist</fullName>
        <active>true</active>
        <description>Check if Duration field exist on service appointment.</description>
        <errorConditionFormula>ISNULL(Duration)</errorConditionFormula>
        <errorDisplayField>Duration</errorDisplayField>
        <errorMessage>Duration field is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__isEarliestStartTimeExist</fullName>
        <active>false</active>
        <description>Check if EarliestStartTime field exist on service appointment.</description>
        <errorConditionFormula>ISNULL( EarliestStartTime )</errorConditionFormula>
        <errorDisplayField>EarliestStartTime</errorDisplayField>
        <errorMessage>EarliestStartTime field is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__startTimeShouldPrecedeEndTime</fullName>
        <active>false</active>
        <errorConditionFormula>SchedEndTime &lt;=  SchedStartTime</errorConditionFormula>
        <errorDisplayField>SchedStartTime</errorDisplayField>
        <errorMessage>The Scheduled Start must be earlier than the Scheduled End.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Indicar_motivo_de_retraso</fullName>
        <active>true</active>
        <description>Si el momento en el que llega el profesional al domicilio es posterior al definido, debe indicar el motivo de retraso.</description>
        <errorConditionFormula>AND(NOW()&gt;ArrivalWindowEndTime,
ISPICKVAL(CSE_SEL_Motivo_Retraso__c,&quot;&quot;),  ISPICKVAL(Status, &quot;En Curso&quot;))</errorConditionFormula>
        <errorMessage>Debe indicar el motivo de retraso a la cita acordada con el cliente.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Inicio_Finalizacion_plazo_de_llegada</fullName>
        <active>true</active>
        <description>La fecha de inicio y finalización de plazo de llegada deben ser el mismo día.</description>
        <errorConditionFormula>AND( NOT(CSE_CAS_Urgente__c),OR(DAY(DATEVALUE(ArrivalWindowStartTime))&lt;&gt;DAY(DATEVALUE(ArrivalWindowEndTime)) ,MONTH(DATEVALUE(ArrivalWindowStartTime))&lt;&gt; MONTH(DATEVALUE(ArrivalWindowEndTime)),YEAR(DATEVALUE(ArrivalWindowStartTime))&lt;&gt;YEAR(DATEVALUE(ArrivalWindowEndTime))))</errorConditionFormula>
        <errorMessage>La fecha de inicio de llegada debe ser el mismo día que la fecha de finalización de llegada.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MotivoDesasignacionRechazoObligatorio</fullName>
        <active>false</active>
        <errorConditionFormula>AND(OR(TEXT(Status) = &apos;Rechazada&apos;, TEXT(Status) = &apos;Desasignada&apos;), ISBLANK(TEXT(CSE_SEL_Motivo_Desasignacion__c )))</errorConditionFormula>
        <errorDisplayField>CSE_SEL_Motivo_Desasignacion__c</errorDisplayField>
        <errorMessage>El motivo de desasignación o rechazo debe ser seleccionado</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Motivo_de_cambio_de_cita_otros</fullName>
        <active>true</active>
        <description>En el caso de que el motivo del cambio de cita de servicio tenga el valor &quot;Otros&quot;, se debe rellenar el campo &quot;comentarios&quot; con el valor de otros correspondiente.</description>
        <errorConditionFormula>AND( ISPICKVAL(CSE_SEL_Motivo_de_cambio_de_cita__c, &quot;Otros&quot;) ,ISBLANK( CSE_TXT_Comentario_Estado__c ))</errorConditionFormula>
        <errorMessage>Si selecciona Otros en el Motivo de cambio de cita debe incluir en comentarios el motivo.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Motivo_de_retraso_otros</fullName>
        <active>true</active>
        <description>Si el valor del motivo del retraso es &quot;otros motivos&quot;, se debe completar el campo comentarios indicando el motivo.</description>
        <errorConditionFormula>AND( ISPICKVAL( CSE_SEL_Motivo_Retraso__c , &quot;motivos&quot;) ,ISBLANK( CSE_TXT_Comentario_Estado__c ))</errorConditionFormula>
        <errorMessage>Si selecciona Otros motivos en el Motivo de retraso de cita debe incluir en comentarios el motivo.</errorMessage>
    </validationRules>
</CustomObject>